--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: #000 url(ESTUDIO.JPG) no-repeat center center fixed;
+    background: #000 url(ESTUDIO.JPG.jpg) no-repeat center center fixed;
     background-size: cover;
     color: white;
 }
